--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,14 @@
 <head>
 </head>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script type="text/javascript" src="/js/cookies.js"></script>
+<script type="text/javascript" src="/js/common_socketio.js"></script>
 <script type="text/javascript" charset="utf-8">
-    var socket = io.connect('http://' + document.domain + ':' + location.port);
-    socket.on('connect', function() {
-        socket.emit('status_info', {message: 'Render on the client has been successful!'});
-    });
+
+// Define type of our client. This type is sent to the server as a part of "connect" message
+var client_type = "user";
+
 </script>
-
-
 <body>
 
 Index!
