--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,9 @@
   <link rel="stylesheet" type="text/css" href="/css/sci-fi-ui.css">
   <link rel="stylesheet" type="text/css" href="/css/jumpdrive.css">
 </head>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<!--script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script-->
+<script type="text/javascript" src="/js/socket.io.min.js"></script>
+
 <script type="text/javascript" src="/js/cookies.js"></script>
 <script type="text/javascript" src="/js/common_socketio.js"></script>
 <script type="text/javascript" src="/js/jumpdrive.js"></script>
