Added debug option to server Server now log clients by IP instead of SID Added comments to JS files JS (clients) now logs in the same manner as server (time status message) Clients now have disabled "Submit coordinates" button, while having the Sudoku solved Bugfixes

--- a/web/index.html
+++ b/web/index.html
@@ -123,8 +123,8 @@
 
 
 <center>
-  <button class="button_blue" onclick="generate_new_sudoku()"> Nové koordináty </button>
-  <button class="button_blue" onclick="check_solved_sudoku()"> Potvrdit vypočítané koordináty </button>
+  <button id="button_new_coordinates" class="button_blue" onclick="generate_new_sudoku()"> Nové koordináty </button>
+  <button id="button_check_coordinates" class="button_blue" onclick="check_solved_sudoku()"> Potvrdit vypočítané koordináty </button>
   <br /><br />
   <div class="jump_status"> 
     <div id="jump_pass" class="text_green_full jump_pass"> KOORDINÁTY ZADÁNY <br /> SKOK PŘIPRAVEN <br />Destinace: <span id="destination"></span></div>
