Send client it's IP and display it on the client's webpage

--- a/web/index.html
+++ b/web/index.html
@@ -131,6 +131,7 @@
     <div id="jump_fail" class="text_red_full jump_fail"> KOORDINÁTY NEZADÁNY <br /> SKOK NENÍ PŘIPRAVEN </div>
 </center>
 
+<div id="client_identification" class="text_blue"></div>
 
 </body>
 </html>
