Admin console added Instant solving of the Sudoku puzzle implemented Difficulty setting implemented Several admin overrides implemented Nicknames implemented - admin can name consoles for better orientation Changing of roles implemented in player - admin can force player console to load different page (= change role)

--- a/web/index.html
+++ b/web/index.html
@@ -128,7 +128,7 @@
   <br /><br />
   <div class="jump_status"> 
     <div id="jump_pass" class="text_green_full jump_pass"> KOORDINÁTY ZADÁNY <br /> SKOK PŘIPRAVEN <br />Destinace: <span id="destination"></span></div>
-    <div id="jump_fail" class="text_red_full jump_fail"> KOORDINÁTY NEZADÁNY <br /> SKOK NENÍ PŘIPRAVEN </div>
+    <div id="jump_fail" class="text_red_full jump_fail"> KOORDINÁTY NEPOTVRZENY <br /> SKOK NENÍ PŘIPRAVEN </div>
 </center>
 
 <div id="client_identification" class="text_blue"></div>
